--- a/app/views/todo/AddTask.html.erb
+++ b/app/views/todo/AddTask.html.erb
@@ -1,6 +1,6 @@
 <html>
     
-<body background="https://wallup.net/wp-content/uploads/2017/11/17/272956-dark-black-cube-square-Tile-simple.jpg">
+<body>
    
         <button class="add-newtodo-button" type="submit" value="add todo">Confirm</button>
     <form action="index.html">
