--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,4 +1,4 @@
-<body background="https://wallup.net/wp-content/uploads/2017/11/17/272956-dark-black-cube-square-Tile-simple.jpg">
+<body>
 
     <h2 class="bawb">Index</h2>
     <div id="wrapper">
