--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,7 @@
+body {
+    background: url(https://wallup.net/wp-content/uploads/2017/11/17/272956-dark-black-cube-square-Tile-simple.jpg);
+}
+
 input{
     height:50px;
     width:262px;
@@ -149,3 +153,4 @@ text-decoration:line-through;
     align-items: center;
     justify-content: center;
 }
+
