Wish I had Delete

--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -8,10 +8,6 @@
         type="submit" value="add todo">Add a Task</button>
     </form>
     </span>
-    <form action="index">
-        <button align="center" id="B1"
-        type="submit" value="add todo">Delete</button>
-    </form>
     </div>
     <br>
     
@@ -19,7 +15,6 @@
 <table>
     
     <tr>
-        <td>Done?</td>
         <td>What Needs to Be done?</td>
         <td>Due Date?</td>
         <td>Time</td>
@@ -27,7 +22,6 @@
     
         <% @todos.each do |todo| %>
     <tr>
-        <td><form action="/todo/destroy/<%= todo.id %>"<a class="add-newtodo-button" href="/todo/destroy">Delete</a></td>
         <td><%= todo.desc %></td>
         <td><%= todo.due %></td>
         <td><%= todo.time %></td>
@@ -36,5 +30,12 @@
     <% end %>
 </table>
 <br>
+
+ <div id="wrapper">
+<form action="party.html">
+<button id="B1"
+        type="submit" value="add todo">Beware</button>
+        </form>
+</div>
 
 </body>
