--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,8 @@
+iframe{
+   display:block;
+   margin:auto;
+}
+
 body {
     background: url(https://wallup.net/wp-content/uploads/2017/11/17/272956-dark-black-cube-square-Tile-simple.jpg);
 }
@@ -165,4 +170,3 @@ text-decoration:line-through;
     align-items: center;
     justify-content: center;
 }
-
