--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -32,7 +32,7 @@
 <br>
 
  <div id="wrapper">
-<form action="party.html">
+<form action="party">
 <button id="B1"
         type="submit" value="add todo">Beware</button>
         </form>
