--- a/app/views/todo/AddTask.html.erb
+++ b/app/views/todo/AddTask.html.erb
@@ -14,7 +14,7 @@
     <br>
             <button class="add-newtodo-button" type="submit" value="add todo">Confirm</button>
     </form>
-<form action="index.html">
+<form action="index">
         <button class="add-newtodo-button" type="submit" value="add todo">Back</button>
     </form>
 
