--- a/app/views/todo/party1.html.erb
+++ b/app/views/todo/party1.html.erb
@@ -1,7 +1,7 @@
 <body>
     <div id="wrapper">
-    <form action="party"><button id="B1" type="submit" value="Back">Back</button></form>
-    <form action="index"><button id="B1" type="submit" value="Home">Home</button></form>
+    <form action="/party"><button id="B1" type="submit" value="Back">Back</button></form>
+    <form action="/index"><button id="B1" type="submit" value="Home">Home</button></form>
     </div>
     <br>
 
